Closed Bug 1858757 Opened 1 year ago Closed 1 year ago

WebTransport connection closes abruptly when multiple connections are established

Categories

(Core :: Networking, defect, P2)

Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
120 Branch
Tracking Status
firefox120 --- verified
firefox121 --- verified

People

(Reporter: kershaw, Assigned: kershaw)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

Here are steps to reproduce

  1. Open page https://googlechrome.github.io/samples/webtransport/client.html on a tab and start a WebTransport connection.
  2. Open a second tab, do the same thing as step 1
    When the second WebTransport connection was established, the first WebTransport connection closed abruptly.
Assignee: nobody → kershaw
Status: NEW → ASSIGNED
Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3c3b9cc2749b Don't coalesce WebTransport connections, r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch

I have reproduced this issue in Windows 10 with Nightly v120.0a1 from 2023-10-12, while it did NOT reproduce on MacOS 11 and Ubuntu 22 with the same browser version. I have verified the fix on Nightly v121.0a1 from 2023-11-07 and Beta v120.0b7.

I will assume that this was a Windows specific issue and fix.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
OS: Unspecified → Windows
Hardware: Unspecified → Desktop
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: