Bug 1858757 - Don't coalesce WebTransport connections, r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D191162